welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
   	if(isFacingTrail()==true){
                        ^SlugSnail:22: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
if(getCouleurSol()==c:Color){
                  ^SlugSnail:22: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
if(getCouleurSol()==c:Color){
                     ^